ra.output
Grammaire

    0 $accept: S $end

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer

    2 LISTE_DEC: LISTE_DEC DEC
    3          | /* vide */

    4 DEC: TYPE LISTE_VAR pvg
    5    | mc_const idf aff VALEUR pvg
    6    | mc_struct acc_ouv LISTE_DEC_SIMPLE acc_fer idf pvg

    7 VALEUR: entier
    8       | reel

    9 TYPE: TYPE_SIMPLE
   10     | mc_struct idf

   11 TYPE_SIMPLE: mc_integer
   12            | mc_float

   13 LISTE_VAR: LISTE_VAR vg idf
   14          | LISTE_VAR vg idf croch_ouv entier croch_fer
   15          | idf
   16          | idf croch_ouv entier croch_fer

   17 LISTE_DEC_SIMPLE: LISTE_DEC_SIMPLE DEC_SIMPLE
   18                 | /* vide */

   19 DEC_SIMPLE: TYPE_SIMPLE LISTE_VAR_SIMPLE pvg

   20 LISTE_VAR_SIMPLE: LISTE_VAR_SIMPLE vg idf
   21                 | idf

   22 LISTE_INST: LISTE_INST INST
   23           | /* vide */

   24 INST: INST_AFF
   25     | INST_IF
   26     | INST_FOR
   27     | INST_WHILE

   28 INST_AFF: idf aff EXP pvg
   29         | idf point idf aff EXP pvg
   30         | idf croch_ouv entier croch_fer aff EXP pvg

   31 EXP: EXP plus EXP
   32    | EXP moins EXP
   33    | EXP slash EXP
   34    | EXP etoile EXP
   35    | idf
   36    | idf point idf
   37    | idf croch_ouv entier croch_fer
   38    | entier
   39    | reel
   40    | par_ouv EXP par_fer

   41 INST_IF: AVANT_ELSE mc_else acc_ouv LISTE_INST acc_fer
   42        | AVANT_INST acc_ouv LISTE_INST acc_fer

   43 AVANT_ELSE: AVANT_INST acc_ouv LISTE_INST acc_fer

   44 AVANT_INST: mc_if par_ouv COND par_fer

   45 INST_FOR: mc_for FOR_INIT acc_ouv LISTE_INST acc_fer

   46 FOR_INIT: par_ouv FOR_PAR par_fer

   47 FOR_PAR: idf deux_points EXP deux_points entier deux_points entier

   48 INST_WHILE: WHILE_PAR acc_ouv LISTE_INST acc_fer

   49 WHILE_PAR: mc_while par_ouv COND par_fer

   50 COND: COND or COND
   51     | COND and COND
   52     | not COND
   53     | EXP inf EXP
   54     | EXP sup EXP
   55     | EXP inf_egal EXP
   56     | EXP sup_egal EXP
   57     | EXP egal_egal EXP
   58     | EXP non_egal EXP
   59     | par_ouv COND par_fer


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
mc_var (258) 1
mc_code (259) 1
mc_integer (260) 11
mc_float (261) 12
mc_const (262) 5
mc_struct (263) 6 10
mc_if (264) 44
mc_else (265) 41
mc_for (266) 45
mc_while (267) 49
deux_points (268) 47
acc_ouv (269) 1 6 41 42 43 45 48
acc_fer (270) 1 6 41 42 43 45 48
croch_ouv (271) 14 16 30 37
croch_fer (272) 14 16 30 37
pvg (273) 4 5 6 19 28 29 30
vg (274) 13 14 20
aff (275) 5 28 29 30
par_ouv (276) 40 44 46 49 59
par_fer (277) 40 44 46 49 59
point (278) 29 36
plus (279) 31
moins (280) 32
slash (281) 33
etoile (282) 34
and (283) 51
or (284) 50
not (285) 52
sup (286) 54
inf (287) 53
sup_egal (288) 56
inf_egal (289) 55
egal_egal (290) 57
non_egal (291) 58
idf (292) 1 5 6 10 13 14 15 16 20 21 28 29 30 35 36 37 47
reel (293) 8 39
entier (294) 7 14 16 30 37 38 47


Non-terminaux, suivis des règles où ils apparaissent

$accept (40)
    à gauche: 0
S (41)
    à gauche: 1, à droite: 0
LISTE_DEC (42)
    à gauche: 2 3, à droite: 1 2
DEC (43)
    à gauche: 4 5 6, à droite: 2
VALEUR (44)
    à gauche: 7 8, à droite: 5
TYPE (45)
    à gauche: 9 10, à droite: 4
TYPE_SIMPLE (46)
    à gauche: 11 12, à droite: 9 19
LISTE_VAR (47)
    à gauche: 13 14 15 16, à droite: 4 13 14
LISTE_DEC_SIMPLE (48)
    à gauche: 17 18, à droite: 6 17
DEC_SIMPLE (49)
    à gauche: 19, à droite: 17
LISTE_VAR_SIMPLE (50)
    à gauche: 20 21, à droite: 19 20
LISTE_INST (51)
    à gauche: 22 23, à droite: 1 22 41 42 43 45 48
INST (52)
    à gauche: 24 25 26 27, à droite: 22
INST_AFF (53)
    à gauche: 28 29 30, à droite: 24
EXP (54)
    à gauche: 31 32 33 34 35 36 37 38 39 40, à droite: 28 29 30 31
    32 33 34 40 47 53 54 55 56 57 58
INST_IF (55)
    à gauche: 41 42, à droite: 25
AVANT_ELSE (56)
    à gauche: 43, à droite: 41
AVANT_INST (57)
    à gauche: 44, à droite: 42 43
INST_FOR (58)
    à gauche: 45, à droite: 26
FOR_INIT (59)
    à gauche: 46, à droite: 45
FOR_PAR (60)
    à gauche: 47, à droite: 46
INST_WHILE (61)
    à gauche: 48, à droite: 27
WHILE_PAR (62)
    à gauche: 49, à droite: 48
COND (63)
    à gauche: 50 51 52 53 54 55 56 57 58 59, à droite: 44 49 50 51
    52 59


état 0

    0 $accept: . S $end
    1 S: . idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer

    idf  décalage et aller à l'état 1

    S  aller à l'état 2


état 1

    1 S: idf . acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer

    acc_ouv  décalage et aller à l'état 3


état 2

    0 $accept: S . $end

    $end  décalage et aller à l'état 4


état 3

    1 S: idf acc_ouv . mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer

    mc_var  décalage et aller à l'état 5


état 4

    0 $accept: S $end .

    $défaut  accepter


état 5

    1 S: idf acc_ouv mc_var . acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer

    acc_ouv  décalage et aller à l'état 6


état 6

    1 S: idf acc_ouv mc_var acc_ouv . LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer
    2 LISTE_DEC: . LISTE_DEC DEC
    3          | .

    $défaut  réduction par utilisation de la règle 3 (LISTE_DEC)

    LISTE_DEC  aller à l'état 7


état 7

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC . acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer
    2 LISTE_DEC: LISTE_DEC . DEC
    4 DEC: . TYPE LISTE_VAR pvg
    5    | . mc_const idf aff VALEUR pvg
    6    | . mc_struct acc_ouv LISTE_DEC_SIMPLE acc_fer idf pvg
    9 TYPE: . TYPE_SIMPLE
   10     | . mc_struct idf
   11 TYPE_SIMPLE: . mc_integer
   12            | . mc_float

    mc_integer  décalage et aller à l'état 8
    mc_float    décalage et aller à l'état 9
    mc_const    décalage et aller à l'état 10
    mc_struct   décalage et aller à l'état 11
    acc_fer     décalage et aller à l'état 12

    DEC          aller à l'état 13
    TYPE         aller à l'état 14
    TYPE_SIMPLE  aller à l'état 15


état 8

   11 TYPE_SIMPLE: mc_integer .

    $défaut  réduction par utilisation de la règle 11 (TYPE_SIMPLE)


état 9

   12 TYPE_SIMPLE: mc_float .

    $défaut  réduction par utilisation de la règle 12 (TYPE_SIMPLE)


état 10

    5 DEC: mc_const . idf aff VALEUR pvg

    idf  décalage et aller à l'état 16


état 11

    6 DEC: mc_struct . acc_ouv LISTE_DEC_SIMPLE acc_fer idf pvg
   10 TYPE: mc_struct . idf

    acc_ouv  décalage et aller à l'état 17
    idf      décalage et aller à l'état 18


état 12

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer . mc_code acc_ouv LISTE_INST acc_fer acc_fer

    mc_code  décalage et aller à l'état 19


état 13

    2 LISTE_DEC: LISTE_DEC DEC .

    $défaut  réduction par utilisation de la règle 2 (LISTE_DEC)


état 14

    4 DEC: TYPE . LISTE_VAR pvg
   13 LISTE_VAR: . LISTE_VAR vg idf
   14          | . LISTE_VAR vg idf croch_ouv entier croch_fer
   15          | . idf
   16          | . idf croch_ouv entier croch_fer

    idf  décalage et aller à l'état 20

    LISTE_VAR  aller à l'état 21


état 15

    9 TYPE: TYPE_SIMPLE .

    $défaut  réduction par utilisation de la règle 9 (TYPE)


état 16

    5 DEC: mc_const idf . aff VALEUR pvg

    aff  décalage et aller à l'état 22


état 17

    6 DEC: mc_struct acc_ouv . LISTE_DEC_SIMPLE acc_fer idf pvg
   17 LISTE_DEC_SIMPLE: . LISTE_DEC_SIMPLE DEC_SIMPLE
   18                 | .

    $défaut  réduction par utilisation de la règle 18 (LISTE_DEC_SIMPLE)

    LISTE_DEC_SIMPLE  aller à l'état 23


état 18

   10 TYPE: mc_struct idf .

    $défaut  réduction par utilisation de la règle 10 (TYPE)


état 19

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code . acc_ouv LISTE_INST acc_fer acc_fer

    acc_ouv  décalage et aller à l'état 24


état 20

   15 LISTE_VAR: idf .
   16          | idf . croch_ouv entier croch_fer

    croch_ouv  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 15 (LISTE_VAR)


état 21

    4 DEC: TYPE LISTE_VAR . pvg
   13 LISTE_VAR: LISTE_VAR . vg idf
   14          | LISTE_VAR . vg idf croch_ouv entier croch_fer

    pvg  décalage et aller à l'état 26
    vg   décalage et aller à l'état 27


état 22

    5 DEC: mc_const idf aff . VALEUR pvg
    7 VALEUR: . entier
    8       | . reel

    reel    décalage et aller à l'état 28
    entier  décalage et aller à l'état 29

    VALEUR  aller à l'état 30


état 23

    6 DEC: mc_struct acc_ouv LISTE_DEC_SIMPLE . acc_fer idf pvg
   11 TYPE_SIMPLE: . mc_integer
   12            | . mc_float
   17 LISTE_DEC_SIMPLE: LISTE_DEC_SIMPLE . DEC_SIMPLE
   19 DEC_SIMPLE: . TYPE_SIMPLE LISTE_VAR_SIMPLE pvg

    mc_integer  décalage et aller à l'état 8
    mc_float    décalage et aller à l'état 9
    acc_fer     décalage et aller à l'état 31

    TYPE_SIMPLE  aller à l'état 32
    DEC_SIMPLE   aller à l'état 33


état 24

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv . LISTE_INST acc_fer acc_fer
   22 LISTE_INST: . LISTE_INST INST
   23           | .

    $défaut  réduction par utilisation de la règle 23 (LISTE_INST)

    LISTE_INST  aller à l'état 34


état 25

   16 LISTE_VAR: idf croch_ouv . entier croch_fer

    entier  décalage et aller à l'état 35


état 26

    4 DEC: TYPE LISTE_VAR pvg .

    $défaut  réduction par utilisation de la règle 4 (DEC)


état 27

   13 LISTE_VAR: LISTE_VAR vg . idf
   14          | LISTE_VAR vg . idf croch_ouv entier croch_fer

    idf  décalage et aller à l'état 36


état 28

    8 VALEUR: reel .

    $défaut  réduction par utilisation de la règle 8 (VALEUR)


état 29

    7 VALEUR: entier .

    $défaut  réduction par utilisation de la règle 7 (VALEUR)


état 30

    5 DEC: mc_const idf aff VALEUR . pvg

    pvg  décalage et aller à l'état 37


état 31

    6 DEC: mc_struct acc_ouv LISTE_DEC_SIMPLE acc_fer . idf pvg

    idf  décalage et aller à l'état 38


état 32

   19 DEC_SIMPLE: TYPE_SIMPLE . LISTE_VAR_SIMPLE pvg
   20 LISTE_VAR_SIMPLE: . LISTE_VAR_SIMPLE vg idf
   21                 | . idf

    idf  décalage et aller à l'état 39

    LISTE_VAR_SIMPLE  aller à l'état 40


état 33

   17 LISTE_DEC_SIMPLE: LISTE_DEC_SIMPLE DEC_SIMPLE .

    $défaut  réduction par utilisation de la règle 17 (LISTE_DEC_SIMPLE)


état 34

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST . acc_fer acc_fer
   22 LISTE_INST: LISTE_INST . INST
   24 INST: . INST_AFF
   25     | . INST_IF
   26     | . INST_FOR
   27     | . INST_WHILE
   28 INST_AFF: . idf aff EXP pvg
   29         | . idf point idf aff EXP pvg
   30         | . idf croch_ouv entier croch_fer aff EXP pvg
   41 INST_IF: . AVANT_ELSE mc_else acc_ouv LISTE_INST acc_fer
   42        | . AVANT_INST acc_ouv LISTE_INST acc_fer
   43 AVANT_ELSE: . AVANT_INST acc_ouv LISTE_INST acc_fer
   44 AVANT_INST: . mc_if par_ouv COND par_fer
   45 INST_FOR: . mc_for FOR_INIT acc_ouv LISTE_INST acc_fer
   48 INST_WHILE: . WHILE_PAR acc_ouv LISTE_INST acc_fer
   49 WHILE_PAR: . mc_while par_ouv COND par_fer

    mc_if     décalage et aller à l'état 41
    mc_for    décalage et aller à l'état 42
    mc_while  décalage et aller à l'état 43
    acc_fer   décalage et aller à l'état 44
    idf       décalage et aller à l'état 45

    INST        aller à l'état 46
    INST_AFF    aller à l'état 47
    INST_IF     aller à l'état 48
    AVANT_ELSE  aller à l'état 49
    AVANT_INST  aller à l'état 50
    INST_FOR    aller à l'état 51
    INST_WHILE  aller à l'état 52
    WHILE_PAR   aller à l'état 53


état 35

   16 LISTE_VAR: idf croch_ouv entier . croch_fer

    croch_fer  décalage et aller à l'état 54


état 36

   13 LISTE_VAR: LISTE_VAR vg idf .
   14          | LISTE_VAR vg idf . croch_ouv entier croch_fer

    croch_ouv  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 13 (LISTE_VAR)


état 37

    5 DEC: mc_const idf aff VALEUR pvg .

    $défaut  réduction par utilisation de la règle 5 (DEC)


état 38

    6 DEC: mc_struct acc_ouv LISTE_DEC_SIMPLE acc_fer idf . pvg

    pvg  décalage et aller à l'état 56


état 39

   21 LISTE_VAR_SIMPLE: idf .

    $défaut  réduction par utilisation de la règle 21 (LISTE_VAR_SIMPLE)


état 40

   19 DEC_SIMPLE: TYPE_SIMPLE LISTE_VAR_SIMPLE . pvg
   20 LISTE_VAR_SIMPLE: LISTE_VAR_SIMPLE . vg idf

    pvg  décalage et aller à l'état 57
    vg   décalage et aller à l'état 58


état 41

   44 AVANT_INST: mc_if . par_ouv COND par_fer

    par_ouv  décalage et aller à l'état 59


état 42

   45 INST_FOR: mc_for . FOR_INIT acc_ouv LISTE_INST acc_fer
   46 FOR_INIT: . par_ouv FOR_PAR par_fer

    par_ouv  décalage et aller à l'état 60

    FOR_INIT  aller à l'état 61


état 43

   49 WHILE_PAR: mc_while . par_ouv COND par_fer

    par_ouv  décalage et aller à l'état 62


état 44

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer . acc_fer

    acc_fer  décalage et aller à l'état 63


état 45

   28 INST_AFF: idf . aff EXP pvg
   29         | idf . point idf aff EXP pvg
   30         | idf . croch_ouv entier croch_fer aff EXP pvg

    croch_ouv  décalage et aller à l'état 64
    aff        décalage et aller à l'état 65
    point      décalage et aller à l'état 66


état 46

   22 LISTE_INST: LISTE_INST INST .

    $défaut  réduction par utilisation de la règle 22 (LISTE_INST)


état 47

   24 INST: INST_AFF .

    $défaut  réduction par utilisation de la règle 24 (INST)


état 48

   25 INST: INST_IF .

    $défaut  réduction par utilisation de la règle 25 (INST)


état 49

   41 INST_IF: AVANT_ELSE . mc_else acc_ouv LISTE_INST acc_fer

    mc_else  décalage et aller à l'état 67


état 50

   42 INST_IF: AVANT_INST . acc_ouv LISTE_INST acc_fer
   43 AVANT_ELSE: AVANT_INST . acc_ouv LISTE_INST acc_fer

    acc_ouv  décalage et aller à l'état 68


état 51

   26 INST: INST_FOR .

    $défaut  réduction par utilisation de la règle 26 (INST)


état 52

   27 INST: INST_WHILE .

    $défaut  réduction par utilisation de la règle 27 (INST)


état 53

   48 INST_WHILE: WHILE_PAR . acc_ouv LISTE_INST acc_fer

    acc_ouv  décalage et aller à l'état 69


état 54

   16 LISTE_VAR: idf croch_ouv entier croch_fer .

    $défaut  réduction par utilisation de la règle 16 (LISTE_VAR)


état 55

   14 LISTE_VAR: LISTE_VAR vg idf croch_ouv . entier croch_fer

    entier  décalage et aller à l'état 70


état 56

    6 DEC: mc_struct acc_ouv LISTE_DEC_SIMPLE acc_fer idf pvg .

    $défaut  réduction par utilisation de la règle 6 (DEC)


état 57

   19 DEC_SIMPLE: TYPE_SIMPLE LISTE_VAR_SIMPLE pvg .

    $défaut  réduction par utilisation de la règle 19 (DEC_SIMPLE)


état 58

   20 LISTE_VAR_SIMPLE: LISTE_VAR_SIMPLE vg . idf

    idf  décalage et aller à l'état 71


état 59

   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer
   44 AVANT_INST: mc_if par_ouv . COND par_fer
   50 COND: . COND or COND
   51     | . COND and COND
   52     | . not COND
   53     | . EXP inf EXP
   54     | . EXP sup EXP
   55     | . EXP inf_egal EXP
   56     | . EXP sup_egal EXP
   57     | . EXP egal_egal EXP
   58     | . EXP non_egal EXP
   59     | . par_ouv COND par_fer

    par_ouv  décalage et aller à l'état 72
    not      décalage et aller à l'état 73
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP   aller à l'état 77
    COND  aller à l'état 78


état 60

   46 FOR_INIT: par_ouv . FOR_PAR par_fer
   47 FOR_PAR: . idf deux_points EXP deux_points entier deux_points entier

    idf  décalage et aller à l'état 79

    FOR_PAR  aller à l'état 80


état 61

   45 INST_FOR: mc_for FOR_INIT . acc_ouv LISTE_INST acc_fer

    acc_ouv  décalage et aller à l'état 81


état 62

   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer
   49 WHILE_PAR: mc_while par_ouv . COND par_fer
   50 COND: . COND or COND
   51     | . COND and COND
   52     | . not COND
   53     | . EXP inf EXP
   54     | . EXP sup EXP
   55     | . EXP inf_egal EXP
   56     | . EXP sup_egal EXP
   57     | . EXP egal_egal EXP
   58     | . EXP non_egal EXP
   59     | . par_ouv COND par_fer

    par_ouv  décalage et aller à l'état 72
    not      décalage et aller à l'état 73
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP   aller à l'état 77
    COND  aller à l'état 82


état 63

    1 S: idf acc_ouv mc_var acc_ouv LISTE_DEC acc_fer mc_code acc_ouv LISTE_INST acc_fer acc_fer .

    $défaut  réduction par utilisation de la règle 1 (S)


état 64

   30 INST_AFF: idf croch_ouv . entier croch_fer aff EXP pvg

    entier  décalage et aller à l'état 83


état 65

   28 INST_AFF: idf aff . EXP pvg
   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer

    par_ouv  décalage et aller à l'état 84
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP  aller à l'état 85


état 66

   29 INST_AFF: idf point . idf aff EXP pvg

    idf  décalage et aller à l'état 86


état 67

   41 INST_IF: AVANT_ELSE mc_else . acc_ouv LISTE_INST acc_fer

    acc_ouv  décalage et aller à l'état 87


état 68

   22 LISTE_INST: . LISTE_INST INST
   23           | .
   42 INST_IF: AVANT_INST acc_ouv . LISTE_INST acc_fer
   43 AVANT_ELSE: AVANT_INST acc_ouv . LISTE_INST acc_fer

    $défaut  réduction par utilisation de la règle 23 (LISTE_INST)

    LISTE_INST  aller à l'état 88


état 69

   22 LISTE_INST: . LISTE_INST INST
   23           | .
   48 INST_WHILE: WHILE_PAR acc_ouv . LISTE_INST acc_fer

    $défaut  réduction par utilisation de la règle 23 (LISTE_INST)

    LISTE_INST  aller à l'état 89


état 70

   14 LISTE_VAR: LISTE_VAR vg idf croch_ouv entier . croch_fer

    croch_fer  décalage et aller à l'état 90


état 71

   20 LISTE_VAR_SIMPLE: LISTE_VAR_SIMPLE vg idf .

    $défaut  réduction par utilisation de la règle 20 (LISTE_VAR_SIMPLE)


état 72

   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer
   40    | par_ouv . EXP par_fer
   50 COND: . COND or COND
   51     | . COND and COND
   52     | . not COND
   53     | . EXP inf EXP
   54     | . EXP sup EXP
   55     | . EXP inf_egal EXP
   56     | . EXP sup_egal EXP
   57     | . EXP egal_egal EXP
   58     | . EXP non_egal EXP
   59     | . par_ouv COND par_fer
   59     | par_ouv . COND par_fer

    par_ouv  décalage et aller à l'état 72
    not      décalage et aller à l'état 73
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP   aller à l'état 91
    COND  aller à l'état 92


état 73

   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer
   50 COND: . COND or COND
   51     | . COND and COND
   52     | . not COND
   52     | not . COND
   53     | . EXP inf EXP
   54     | . EXP sup EXP
   55     | . EXP inf_egal EXP
   56     | . EXP sup_egal EXP
   57     | . EXP egal_egal EXP
   58     | . EXP non_egal EXP
   59     | . par_ouv COND par_fer

    par_ouv  décalage et aller à l'état 72
    not      décalage et aller à l'état 73
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP   aller à l'état 77
    COND  aller à l'état 93


état 74

   35 EXP: idf .
   36    | idf . point idf
   37    | idf . croch_ouv entier croch_fer

    croch_ouv  décalage et aller à l'état 94
    point      décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 35 (EXP)


état 75

   39 EXP: reel .

    $défaut  réduction par utilisation de la règle 39 (EXP)


état 76

   38 EXP: entier .

    $défaut  réduction par utilisation de la règle 38 (EXP)


état 77

   31 EXP: EXP . plus EXP
   32    | EXP . moins EXP
   33    | EXP . slash EXP
   34    | EXP . etoile EXP
   53 COND: EXP . inf EXP
   54     | EXP . sup EXP
   55     | EXP . inf_egal EXP
   56     | EXP . sup_egal EXP
   57     | EXP . egal_egal EXP
   58     | EXP . non_egal EXP

    plus       décalage et aller à l'état 96
    moins      décalage et aller à l'état 97
    slash      décalage et aller à l'état 98
    etoile     décalage et aller à l'état 99
    sup        décalage et aller à l'état 100
    inf        décalage et aller à l'état 101
    sup_egal   décalage et aller à l'état 102
    inf_egal   décalage et aller à l'état 103
    egal_egal  décalage et aller à l'état 104
    non_egal   décalage et aller à l'état 105


état 78

   44 AVANT_INST: mc_if par_ouv COND . par_fer
   50 COND: COND . or COND
   51     | COND . and COND

    par_fer  décalage et aller à l'état 106
    and      décalage et aller à l'état 107
    or       décalage et aller à l'état 108


état 79

   47 FOR_PAR: idf . deux_points EXP deux_points entier deux_points entier

    deux_points  décalage et aller à l'état 109


état 80

   46 FOR_INIT: par_ouv FOR_PAR . par_fer

    par_fer  décalage et aller à l'état 110


état 81

   22 LISTE_INST: . LISTE_INST INST
   23           | .
   45 INST_FOR: mc_for FOR_INIT acc_ouv . LISTE_INST acc_fer

    $défaut  réduction par utilisation de la règle 23 (LISTE_INST)

    LISTE_INST  aller à l'état 111


état 82

   49 WHILE_PAR: mc_while par_ouv COND . par_fer
   50 COND: COND . or COND
   51     | COND . and COND

    par_fer  décalage et aller à l'état 112
    and      décalage et aller à l'état 107
    or       décalage et aller à l'état 108


état 83

   30 INST_AFF: idf croch_ouv entier . croch_fer aff EXP pvg

    croch_fer  décalage et aller à l'état 113


état 84

   31 EXP: . EXP plus EXP
   32    | . EXP moins EXP
   33    | . EXP slash EXP
   34    | . EXP etoile EXP
   35    | . idf
   36    | . idf point idf
   37    | . idf croch_ouv entier croch_fer
   38    | . entier
   39    | . reel
   40    | . par_ouv EXP par_fer
   40    | par_ouv . EXP par_fer

    par_ouv  décalage et aller à l'état 84
    idf      décalage et aller à l'état 74
    reel     décalage et aller à l'état 75
    entier   décalage et aller à l'état 76

    EXP  aller à l'état 114


état 85

   28 INST_AFF: idf aff EXP . pvg
   31 EXP: EXP . plus EXP
   32    | EXP . moins EXP
   33    | EXP . slash EXP
   34    | EXP . etoile EXP

    pvg     décalage et aller à l'état 115
    plus    décalage et aller à l'état 96
    moins   décalage et aller à l'état 97
    slash   décalage et aller à l'état 98
    etoile  décalage et aller à l'état 99


état 86

   29 INST_AFF: idf point idf . aff EXP pvg

    aff  décalage et aller à l'état 116


état 87

   22 LISTE_INST: . LISTE_INST INST
   23           | .
   41 INST_IF: AVANT_ELSE mc_else acc_ouv . LISTE_INST acc_fer

    $défaut  réduction par utilisation de la règle 23 (LISTE_INST)

    LISTE_INST  aller à l'état 117


état 88

   22 LISTE_INST: LISTE_INST . INST
   24 INST: . INST_AFF
   25     | . INST_IF
   26     | . INST_FOR
   27     | . INST_WHILE
   28 INST_AFF: . idf aff EXP pvg
   29         | . idf point idf aff EXP pvg
   30         | . idf croch_ouv entier croch_fer aff EXP pvg
   41 INST_IF: . AVANT_ELSE mc_else acc_ouv LISTE_INST acc_fer
   42        | . AVANT_INST acc_ouv LISTE_INST acc_fer
   42        | AVANT_INST acc_ouv LISTE_INST . acc_fer
   43 AVANT_ELSE: . AVANT_INST acc_ouv LISTE_INST acc_fer
   43           | AVANT_INST acc_ouv LISTE_INST . acc_fer
   44 AVANT_INST: . mc_if par_ouv COND par_fer
   45 INST_FOR: . mc_for FOR_INIT acc_ouv LISTE_INST acc_fer
   48 INST_WHILE: . WHILE_PAR acc_ouv LISTE_INST acc_fer
   49 WHILE_PAR: . mc_while par_ouv COND par_fer

    mc_if     décalage et aller à l'état 41
    mc_for    décalage et aller à l'état 42
    mc_while  décalage et aller à l'état 43
    acc_fer   décalage et aller à l'état 118
    idf       décalage et aller à l'état 45

    INST        aller à l'état 46
    INST_AFF    aller à l'état 47
    INST_IF     aller à l'état 48
    AVANT_ELSE  aller à l'état 49
    AVANT_INST  aller à l'état 50
    INST_FOR    aller à l'état 51
    INST_WHILE  aller à l'état 52
    WHILE_PAR   aller à l'état 53


état 89

   22 LISTE_INST: LISTE_INST . INST
   24 INST: . INST_AFF
   25     | . INST_IF
   26     | . INST_FOR
   27     | . INST_WHILE
   28 INST_AFF: . idf aff EXP pvg
   29         | . idf point idf aff EXP pvg
   30         | . idf croch_ouv entier croch_fer aff EXP pvg
   41 INST_IF: . AVANT_ELSE mc_else acc_ouv LISTE_INST acc_fer
   42        | . AVANT_INST acc_ouv LISTE_INST acc_fer
   43 AVANT_ELSE: . AVANT_INST acc_ouv LISTE_INST acc_fer
   44 AVANT_INST: . mc_if par_ouv COND par_fer
   45 INST_FOR: . mc_for FOR_INIT acc_ouv LISTE_INST acc_fer
   48 INST_WHILE: . WHILE_PAR acc_ouv LISTE_INST acc_fer
   48           | WHILE_PAR acc_ouv LISTE_INST . acc_fer
   49 WHILE_PAR: . mc_while par_ouv COND par_fer

    mc_if     décalage et aller à l'état 41
    mc_for    décalage et aller à l'état 42
    mc_while  décalage et aller à l'état 43
    acc_fer   décalage et aller à l'état 119
    idf       décalage et aller à l'état 45

    INST        aller à l'état 46
    INST_AFF    aller à l'état 47
    INST_IF     aller à l'état 48
    AVANT_ELSE  aller à l'état 49
    AVANT_INST  aller à l'état 50
    INST_FOR    aller à l'état 51
    INST_WHILE  aller à l'état 52
    WHILE_PAR   aller à l'état 53


état 90

   14 LISTE_VAR: LISTE_VAR vg idf croch_ouv entier croch_fer .

    $défaut  réduction par utilisation de la règle 14 (LISTE_VAR)


état 91

   31 EXP: EXP . plus EXP
   32    | EXP . moins EXP
   33    | EXP . slash EXP
   34    | EXP . etoile EXP
   40    | par_ouv EXP . par_fer
   53 COND: EXP . inf EXP
   54     | EXP . sup EXP
   55     | EXP . inf_egal EXP
   56     | EXP . sup_egal EXP
   57     | EXP . egal_egal EXP
   58     | EXP . non_egal EXP

    par_fer    décalage et aller à l'état 120
    plus       décalage et aller à l'état 96
    moins      décalage et aller à l'état 97
    slash      décalage et aller à l'état 98
    etoile     décalage et aller à l'état 99
    sup        décalage et aller à l'état 100
    inf        décalage et aller à l'état 101
    sup_egal   décalage et aller à l'état 102
    inf_egal   décalage et aller à l'état 103
    egal_egal  décalage et aller à l'état 104
    non_egal   décalage et aller à l'état 105


état 92

   50 COND: COND . or COND
   51     | COND . and COND
   59     | par_ouv COND . par_fer

    par_fer  décalage et aller à l'état 121
    and      décalage et aller à l'état 107
    or       décalage et aller à l'état 108


état 93

   50 COND: COND . or COND
   51     | COND . and COND
   52     | not COND .

    $défaut  réduction par utilisation de la règle 52 (COND)


état 94

   37 EXP: idf croch_ouv . entier croch_fer

    entier  décalage et aller à l'état 122


état 95

   36 EXP: idf point . idf

    idf  décalage et aller à l'état 123


état 96
